Added Public URL & Download option on gallery page.

--- a/twcswiftclient/templates/home.html
+++ b/twcswiftclient/templates/home.html
@@ -16,5 +16,7 @@
 <a href="/">On Website:</a> <br>
 - Click "My Image Gallery" to check the Uploaded Images from Cloud Storage.<br>
 - Click "My Video Gallery" to check the Uploaded Videos from Cloud Storage.<br>
-
+- The Images/Videos are rendered through the Public URL from TWC Cloud. <br>
+- You can download the displayed Images/Videos by clicking on it. <br>
+- You can copy and use the displayed Images/Videos Public URL in your website as CDN source. 
 {% endblock %}
