--- a/twcswiftclient/templates/gallery.html
+++ b/twcswiftclient/templates/gallery.html
@@ -14,16 +14,35 @@
 {% endblock %}
 
 {% block one_column %}
-<h1>{{gallery.name}}</h1>
+<h1>Image Gallery</h1>
+<h4>{{gallery.name}}</h4>
 <p class="lead">{{gallery.description}}</p>
 
 <ul class="thumbnails" data-clearing>
 {% for image in images %}
-  <li class="span3">
+	<!-- <li class="span3"> -->
+	<table><tr><td>
     <a href="{{image.image.url}}" class="thumbnail" title="{{image.name}}">
-      <img data-permalink="{% url 'smh_gallery_image' gallery.slug image.slug %}" data-caption="{{image.name}}" src="{{image.image.url}}" alt="{{image.name}}" class="img_color-black img-rounded">
+      <img data-permalink="{% url 'smh_gallery_image' gallery.slug image.slug %}" data-caption="{{image.name}}" src="{{image.image.url}}" alt="{{image.name}}" class="img_color-black img-rounded" style="width:320px;height:270px;">
     </a>
-  </li>
+    <p class="offset3"><small>Click the image to download.</small></p>
+    </td>
+    <td>
+    <div class="span5">
+        <h2>{{image.name}}</h2>
+        <h4>{{image.date}}</h4>
+        <p class="lead">{{image.description}}<p>
+		<h4>Public URL from TWC Cloud:</h4>
+		<hr>
+		<small>{{image.image.url}}</small>
+		<hr>
+		
+    </div>
+
+    
+    </td>
+    </tr></table>
+  <!-- </li> -->
 {% endfor %}
 </ul>
 {% endblock %}
