--- a/twcswiftclient/templates/gallery.html
+++ b/twcswiftclient/templates/gallery.html
@@ -23,7 +23,7 @@
 	<!-- <li class="span3"> -->
 	<table><tr><td>
     <a href="{{image.image.url}}" class="thumbnail" title="{{image.name}}">
-      <img data-permalink="{% url 'smh_gallery_image' gallery.slug image.slug %}" data-caption="{{image.name}}" src="{{image.image.url}}" alt="{{image.name}}" class="img_color-black img-rounded" style="width:320px;height:270px;">
+      <img data-caption="{{image.name}}" src="{{image.image.url}}" alt="{{image.name}}" class="img_color-black img-rounded" style="width:320px;height:270px;">
     </a>
     <p class="offset3"><small>Click the image to download.</small></p>
     </td>
